# FlagWars

./: DEPENDENCIES_LICENSE.md  DEPLOYMENT.md  LICENSE  README.md  README_ch.md  TODO  TODO.md  create_test_user.py  pyproject.toml  run_server.py  start_server.bat  test_new_features.py  test_terrain_and_bases.py  使用说明.md
.trae/rules/: project_rules.md
docs/: project-structure.md
src/flagwars/: __init__.py  ai_config  ai_environment.py  auth.py  config.py  database.py  maintraining.py  mcts_environment.py  models.py  monte_carlo_tree.py  neural_network.py  self_play.py  server.py  simple_ai.py  training.py
src/flagwars/templates/: index.html  login.html  shop.html
局域网游玩指南/: quick_connect.bat  setup_firewall.bat  setup_firewall.ps1  start_lan_server.bat  局域网游玩指南.md
设计素材/宣传画/: 1.psd
